add cypress and rest of code

--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,15 @@
 }
 
 .App-header {
+  width: 10vw;
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  max-height: 10vh;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.signout{
+  width: 20% !important;
 }
 
 .App-link {
