--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.modal{
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  position: absolute;
+  top: 30%;
+  z-index: 100;
+}
+
+.modalContainer{
+  margin-top: 10%;
+  padding: 10%;
+}
